tests/errors/err09_llave_sin_cerrar.ml
// Error 09: [SINTÁCTICO] Llave de cierre faltante
func incompleta(x) {
    return x * 2;

a = 5;
print(a);
